Fixed css for logo so it is aligned to the right and is correct size.

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
 }
 
 header > img {
-    width: 15%;
-    height: 15%;
+    width: 12%;
+    height: inherit;
+    position: absolute;
+    right: 0px;
 }
